--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body style="background-color: rgb(98, 184, 95);>
   <header class="header">
     <nav class="navbar">
       <div class="navbar-container container">
@@ -44,9 +44,10 @@
           </div>
           <img src="https://i.postimg.cc/Hx4nChpH/fbavatar-1630400663387-6838396024049256103.png" alt="image" style="border: 1;"/>
           <p>
-            I am 20 year old, Btech student studied a NMAMIT,Karnataka,India
+            I am 20 year old, Btech student studied at NMAMIT,Karnataka,India
             I really enjoy solving problems as well as making things pretty and easy to use. I can't stop learning new
             things; the more, the better.
+            
           </p>
           <div class="work-arrow">
             <p>
