--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 
-<body style="background-color: rgb(161, 170, 123);>
+<body style="background-color: lightblue;>
   <header class="header">
     <nav class="navbar">
       <div class="navbar-container container">
